# projectAI

./: .env  .env.example  .gitignore  CONTRIBUTING.md  README.md  agent_generic.py  agent_manager.py  client_terminal.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_factory.sh  routing.py  start_wsl.sh  utils.py
.github/workflows/: ci.yml
Archive/: agent_generic.py  agent_manager.py  client_terminal.py  reset_factory.sh  start_wsl.sh  utils - Copie.py  utils.py
Archive/Nouveau dossier/: agent_generic.py  agent_manager.py  app.py  client_terminal.py  start_factory.sh  start_wsl.sh  stop_factory.sh  utils.py
project_logs/: project_4756a7cb-9961-46d9-b533-180bce131f67.jsonl  project_a853bf90-f202-4ee0-a867-bca7b232a1bf.jsonl
tests/: test_utils.py
